2008-03-17  Ethan A Merritt  <merritt@u.washington.edu>

	* src/variable.c src/variable.c src/util.c src/util.h src/save.c:
	Make current_locale a global. Don't reset locale to "C" unnecessarily.
	Rename get_numeric_locale() to get_time_locale(), since that's what it
	really does.

	* src/wxterminal/wxt_gui.cpp (wxt_init): Restore the locale settings
	for both LC_TIME and LC_NUMERIC, but only after the GTK+ thread has
	finished mangling them.
	Bug #1916190

2008-03-16  Ethan A Merritt  <merritt@u.washington.edu>

	"set locale" was taking the encoding (LC_CTYPE) from the environment,
	but not the time/date usage (LC_TIME). This is exactly backwards from
	what the documentation says. Change behavior to match the docs. However,
	if the current locale is UTF8 then also set the encoding to utf8.

	Move almost all of the code conditioned on HAVE_LOCALE_H into
	variable.h and variable.c.

2008-03-15  Thomas Sefzick  <thse@users.sourceforge.net>

	* src/axis.c (setup_tics):  If the user specified an explicit
	tic interval on a timefmt axis, do not change this by calling
	quantize_time_tics().
	Bug #1908019

2008-03-14  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* src/graphics.c (do_circles): Instead of drawing all the circle
	interiors, followed by all of the circle boundaries, draw both the
	interior and the boundary for each circle in succession.

2008-03-13  Ethan A Merritt  <merritt@u.washington.edu>

	* config/config.cyg config/config.dj2 config/config.mgw config/config.nt
	config/config.os2 config/config.oww config/config.wc configure.in
	src/datafile.c src/datafile.h src/gadgets.c src/gadgets.h src/gp_types.h
	src/graph3d.c src/graph3d.h src/graphics.c src/graphics.h src/hidden3d.c
	src/plot2d.c src/plot2d.h src/plot3d.c src/pm3d.c src/save.c src/set.c
	src/show.c src/tables.c src/tables.h src/unset.c src/util3d.c
	src/util3d.h:  Code cleanup of options no longer marked EXPERIMENTAL.

	Remove conditional build flags EAM_HISTOGRAMS and EAM_DATASTRINGS.